crates/filecargo-tui/src/snapshots/filecargo_tui__view_tests__connected_listing_shows_the_url_and_marks_the_connected_site.snap
---
source: crates/filecargo-tui/src/view_tests.rs
expression: "draw(&ui, &app)"
---
"┌ Servers ─────────────┐┌ Local ~/projects ────────────────────────────┐┌ Remote sftp://prod-web.example.org/var/www ──┐"
"│▾ Personal            ││  Name                      Size   Modified   ││  Name                      Size   Modified   │"
"│    blog              ││  ..                                          ││  ..                                          │"
"│▾ Work                ││  docs/                            09-29 06:00││  html/                            09-28 20:00│"
"│  ● prod-web          ││  src/                             09-28 10:00││  index.php                   4.3K 09-28 22:00│"
"│    staging           ││  README.md                   2.1K 09-29 10:00││  style.css                  12.5K 09-28 22:00│"
"│  home-nas            ││  notes.txt                    340 09-30 09:00││                                              │"
"│                      ││  big.iso                     1.5G 08-24 00:00││                                              │"
"│                      ││                                              ││                                              │"
"│                      ││                                              ││                                              │"
"│                      ││                                              ││                                              │"
"│                      ││                                              ││                                              │"
"│                      ││                                              ││                                              │"
"│                      ││                                              ││                                              │"
"│                      ││                                              ││                                              │"
"│                      ││                                              ││                                              │"
"│                      ││                                              ││                                              │"
"│                      ││                                              ││                                              │"
"│                      ││                                              ││                                              │"
"│                      ││                                              ││                                              │"
"└──────────────────────┘└──────────────────────────────────────────────┘└──────────────────────────────────────────────┘"
"┌ Queue (0) │ Completed (0) │ Failed (0) │ Log │ Terminal ─────────────────────────────────────────────────────────────┐"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                Nothing queued. Select files and press F5 to transfer.                                │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘"
" F5 download · F7 mkdir · F2 rename · F8 delete · c chmod · g go to · F1 help · q quit                                  "
