crates/filecargo-tui/src/snapshots/filecargo_tui__view_tests__connecting_shows_the_step_in_the_remote_title.snap
---
source: crates/filecargo-tui/src/view_tests.rs
expression: "draw(&ui, &app)"
---
"┌ Servers ─────────────┐┌ Local ~/projects ────────────────────────────┐┌ Remote (authenticating prod-web…) ───────────┐"
"│▾ Personal            ││  Name                      Size   Modified   ││                                              │"
"│    blog              ││  ..                                          ││                                              │"
"│▾ Work                ││  docs/                            09-29 06:00││                                              │"
"│  ◌ prod-web          ││  src/                             09-28 10:00││                                              │"
"│    staging           ││  README.md                   2.1K 09-29 10:00││                                              │"
"│  home-nas            ││  notes.txt                    340 09-30 09:00││                                              │"
"│                      ││  big.iso                     1.5G 08-24 00:00││                                              │"
"│                      ││                                              ││                                              │"
"│                      ││                                              ││                                              │"
"│                      ││                                              ││                  Connecting…                 │"
"│                      ││                                              ││                                              │"
"│                      ││                                              ││                                              │"
"│                      ││                                              ││                                              │"
"│                      ││                                              ││                                              │"
"│                      ││                                              ││                                              │"
"│                      ││                                              ││                                              │"
"│                      ││                                              ││                                              │"
"│                      ││                                              ││                                              │"
"│                      ││                                              ││                                              │"
"└──────────────────────┘└──────────────────────────────────────────────┘└──────────────────────────────────────────────┘"
"┌ Queue (0) │ Completed (0) │ Failed (0) │ Log │ Terminal ─────────────────────────────────────────────────────────────┐"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                Nothing queued. Select files and press F5 to transfer.                                │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘"
" F5 upload · F7 mkdir · F2 rename · F8 delete · g go to · . dotfiles · s sort · F1 help · q quit                        "
