crates/filecargo-tui/src/snapshots/filecargo_tui__view_tests__disconnected_at_80x24.snap
---
source: crates/filecargo-tui/src/view_tests.rs
expression: "draw(&ui, &app)"
---
"┌ Local ~/projects ────────────────────┐┌ Remote (not connected) ──────────────┐"
"│  Name              Size   Modified   ││                                      │"
"│  ..                                  ││                                      │"
"│  docs/                    09-29 06:00││                                      │"
"│  src/                     09-28 10:00││                                      │"
"│  README.md           2.1K 09-29 10:00││                                      │"
"│  notes.txt            340 09-30 09:00││                                      │"
"│  big.iso             1.5G 08-24 00:00││                                      │"
"│                                      ││   Select a server and press Enter.   │"
"│                                      ││                                      │"
"│                                      ││                                      │"
"│                                      ││                                      │"
"│                                      ││                                      │"
"│                                      ││                                      │"
"│                                      ││                                      │"
"│                                      ││                                      │"
"└──────────────────────────────────────┘└──────────────────────────────────────┘"
"┌ Queue (0) │ Completed (0) │ Failed (0) │ Log │ Terminal ─────────────────────┐"
"│                                                                              │"
"│                                                                              │"
"│            Nothing queued. Select files and press F5 to transfer.            │"
"│                                                                              │"
"└──────────────────────────────────────────────────────────────────────────────┘"
" F5 upload · F7 mkdir · F2 rename · F8 delete · g go to · . dotfiles · s sort · "
